@@ -84,7 +84,8 @@ sub gst_service_sysv_get_paths
        "pld-1.1"      => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
        "pld-1.99"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
 
-       "fedora-1"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"]
+       "fedora-1"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
+       "fedora-2"     => ["$gst_prefix/etc/rc.d", "$gst_prefix/etc/rc.d/init.d", "../init.d"],
        );
   my $res;
 
@@ -136,7 +137,8 @@ sub gst_service_sysv_get_runlevels
        "pld-1.1"        => [3, 5],
        "pld-1.99"       => [3, 5],
 
-       "fedora-1"       => [3, 5]
+       "fedora-1"       => [3, 5],
+       "fedora-2"       => [3, 5],
        );
   my $res;
 
@@ -185,6 +187,7 @@ sub gst_service_get_verbose_runlevels
      "pld-1.1"        => "redhat-5.2",
      "pld-1.99"       => "redhat-5.2",
      "fedora-1"       => "redhat-5.2",
+     "fedora-2"       => "redhat-5.2",
 
      "slackware-9.1.0" => "slackware-9.1.0",
      "slackware-10.0.0" => "slackware-9.1.0",
@@ -1558,6 +1561,7 @@ sub gst_service_get_status
        "redhat-8.0"   => \&gst_service_redhat_get_status,
        "redhat-9"     => \&gst_service_redhat_get_status,
        "fedora-1"     => \&gst_service_redhat_get_status,
+       "fedora-2"     => \&gst_service_redhat_get_status,
 
        "suse-9.0"     => \&gst_service_suse_get_status,
        "suse-9.1"     => \&gst_service_suse_get_status,
